# FlowPilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  start.ps1
.github/workflows/: ci.yml
src/flowpilot/: __init__.py  app.py  capture.py  executor.py  graph.py  inspector.py  model.py  screen.py
src/flowpilot/engine/: __init__.py  __main__.py  actions.py  hotkeys.py  manager.py  model.py  pins.py  runner.py  server.py  store.py
tests/: test_app.py  test_capture.py  test_engine.py  test_executor.py  test_graph.py  test_model.py  test_screen.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  codegen.ts  index.css  main.tsx  store.ts  types.ts
web/src/components/: ClickPreview.tsx  FlowCanvas.tsx  Inspector.tsx  Palette.tsx  SwipeEditor.tsx  TaskList.tsx  Toolbar.tsx  VariablesPanel.tsx  WorkflowNode.tsx
