[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowpilot-automation"
version = "0.2.1"
description = "A visual, node-based desktop automation studio with execution and data wires."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FlowPilot contributors" }]
dependencies = [
  "PySide6>=6.8",
  "mss>=10.0",
  "numpy>=2.0",
  "opencv-python>=4.10",
  "pyautogui>=0.9.54",
  "pyperclip>=1.8",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9", "httpx>=0.27"]

[project.scripts]
flowpilot = "flowpilot.app:main"
flowpilot-studio = "flowpilot.engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flowpilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

